{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 841,
  "lineage": "ee925825-8aa3-f250-0261-7473ff58cc7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0195ce6af3714c4e9",
            "arn": "arn:aws:ec2:eu-west-1:374412816316:elastic-ip/eipalloc-0195ce6af3714c4e9",
            "association_id": "eipassoc-0d0ea04c15e1d091d",
            "domain": "vpc",
            "id": "eipalloc-0195ce6af3714c4e9",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0729378eff55e258d",
            "private_dns": "ip-10-0-1-44.eu-west-1.compute.internal",
            "private_ip": "10.0.1.44",
            "public_dns": "ec2-3-255-23-213.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.255.23.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:internet-gateway/igw-0ddcf31d963e8b713",
            "id": "igw-0ddcf31d963e8b713",
            "owner_id": "374412816316",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0195ce6af3714c4e9",
            "association_id": "eipassoc-0d0ea04c15e1d091d",
            "connectivity_type": "public",
            "id": "nat-0c8ef5ee2cb70ea64",
            "network_interface_id": "eni-0729378eff55e258d",
            "private_ip": "10.0.1.44",
            "public_ip": "3.255.23.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f2dfbec0bc25bbd0",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:route-table/rtb-05f763b0da50190c9",
            "id": "rtb-05f763b0da50190c9",
            "owner_id": "374412816316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c8ef5ee2cb70ea64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:route-table/rtb-0a6a77e6a17415eba",
            "id": "rtb-0a6a77e6a17415eba",
            "owner_id": "374412816316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddcf31d963e8b713",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ef8b4d3990570db",
            "route_table_id": "rtb-05f763b0da50190c9",
            "subnet_id": "subnet-0079b570ae856a846"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnet-a",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0683b906fec5d9af5",
            "route_table_id": "rtb-05f763b0da50190c9",
            "subnet_id": "subnet-05d3701bba435c36f"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnet-b",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7ce97220a464db",
            "route_table_id": "rtb-0a6a77e6a17415eba",
            "subnet_id": "subnet-0f2dfbec0bc25bbd0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0614641892506e4b0",
            "route_table_id": "rtb-0a6a77e6a17415eba",
            "subnet_id": "subnet-03d3836864f35bf9d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:security-group/sg-09e90d789804c4359",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e90d789804c4359",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow all traffic",
            "name_prefix": "",
            "owner_id": "374412816316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow all trafic"
            },
            "tags_all": {
              "Name": "Allow all trafic"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_basic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:security-group/sg-0dd9e330a6da97beb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd9e330a6da97beb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ICMP and SSH",
            "name_prefix": "",
            "owner_id": "374412816316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow ICMP and SSH"
            },
            "tags_all": {
              "Name": "Allow ICMP and SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:security-group/sg-00121c773197e3762",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00121c773197e3762",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow HTTP",
            "name_prefix": "",
            "owner_id": "374412816316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP"
            },
            "tags_all": {
              "Name": "Allow HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:security-group/sg-04953e02fca499f61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04953e02fca499f61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Allow SQL",
            "name_prefix": "",
            "owner_id": "374412816316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SQL"
            },
            "tags_all": {
              "Name": "Allow SQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:subnet/subnet-0079b570ae856a846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0079b570ae856a846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374412816316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSubnet"
            },
            "tags_all": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:subnet/subnet-05d3701bba435c36f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d3701bba435c36f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374412816316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSubnet"
            },
            "tags_all": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:subnet/subnet-0f2dfbec0bc25bbd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2dfbec0bc25bbd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374412816316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnet"
            },
            "tags_all": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:subnet/subnet-03d3836864f35bf9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d3836864f35bf9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374412816316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnet"
            },
            "tags_all": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:vpc/vpc-04f2d7d42aa4bcdfc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e5f0e2bbe6fdd93",
            "default_route_table_id": "rtb-089387f2bb9676c96",
            "default_security_group_id": "sg-09d91351d983b136f",
            "dhcp_options_id": "dopt-0ffa6148fb3f264ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f2d7d42aa4bcdfc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089387f2bb9676c96",
            "owner_id": "374412816316",
            "tags": {
              "Name": "mainNetwork"
            },
            "tags_all": {
              "Name": "mainNetwork"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:loadbalancer/app/private-app-polishnewsanalyzer/83bc8c8a42a1386e",
            "arn_suffix": "app/private-app-polishnewsanalyzer/83bc8c8a42a1386e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "private-app-polishnewsanalyzer-960699760.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:loadbalancer/app/private-app-polishnewsanalyzer/83bc8c8a42a1386e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-app-polishnewsanalyzer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09e90d789804c4359",
              "sg-0fd12ab1a6cd1722e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d3836864f35bf9d"
              },
              {
                "subnet_id": "subnet-0f2dfbec0bc25bbd0"
              }
            ],
            "subnets": [
              "subnet-03d3836864f35bf9d",
              "subnet-0f2dfbec0bc25bbd0"
            ],
            "tags": {
              "Name": "private-app-polishnewsanalyzer",
              "Namespace": "private",
              "Stage": "app"
            },
            "tags_all": {
              "Name": "private-app-polishnewsanalyzer",
              "Namespace": "private",
              "Stage": "app"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.allin",
            "aws_subnet.public-subnet-a",
            "aws_subnet.public-subnet-b",
            "aws_vpc.main",
            "module.alb.aws_security_group.default",
            "module.alb.module.access_logs.module.s3_bucket.module.aws_s3_bucket.aws_s3_bucket.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:listener/app/private-app-polishnewsanalyzer/83bc8c8a42a1386e/9126e6e83f6cc66b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:targetgroup/private-app-polishnewsanal-6f21e/f2c4e66283aa92e5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:listener/app/private-app-polishnewsanalyzer/83bc8c8a42a1386e/9126e6e83f6cc66b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:loadbalancer/app/private-app-polishnewsanalyzer/83bc8c8a42a1386e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "private-app-polishnewsanalyzer",
              "Namespace": "private",
              "Stage": "app"
            },
            "tags_all": {
              "Name": "private-app-polishnewsanalyzer",
              "Namespace": "private",
              "Stage": "app"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allin",
            "aws_subnet.public-subnet-a",
            "aws_subnet.public-subnet-b",
            "aws_vpc.main",
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.alb.module.access_logs.module.s3_bucket.module.aws_s3_bucket.aws_s3_bucket.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:targetgroup/private-app-polishnewsanal-6f21e/f2c4e66283aa92e5",
            "arn_suffix": "targetgroup/private-app-polishnewsanal-6f21e/f2c4e66283aa92e5",
            "deregistration_delay": "15",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:374412816316:targetgroup/private-app-polishnewsanal-6f21e/f2c4e66283aa92e5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:374412816316:loadbalancer/app/private-app-polishnewsanalyzer/83bc8c8a42a1386e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-app-polishnewsanal-6f21e",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Attributes": "default",
              "Name": "private-app-polishnewsanal-6f21e",
              "Namespace": "private",
              "Stage": "app"
            },
            "tags_all": {
              "Attributes": "default",
              "Name": "private-app-polishnewsanal-6f21e",
              "Namespace": "private",
              "Stage": "app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:security-group/sg-0fd12ab1a6cd1722e",
            "description": "Controls access to the ALB (HTTP/HTTPS)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd12ab1a6cd1722e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-app-polishnewsanalyzer",
            "name_prefix": "",
            "owner_id": "374412816316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-app-polishnewsanalyzer",
              "Namespace": "private",
              "Stage": "app"
            },
            "tags_all": {
              "Name": "private-app-polishnewsanalyzer",
              "Namespace": "private",
              "Stage": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4242059558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fd12ab1a6cd1722e",
            "security_group_rule_id": "sgr-0f7e3841d241acbfe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.alb.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-829507808",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd12ab1a6cd1722e",
            "security_group_rule_id": "sgr-0188d612bc845d348",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.alb.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task_pna",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:security-group/sg-0ee19b13b36bb8243",
            "description": "Allow ALL egress from ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic to any IPv4 address",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee19b13b36bb8243",
            "ingress": [],
            "name": "private-app-polishnewsanalyzer-service",
            "name_prefix": "",
            "owner_id": "374412816316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "service",
              "Name": "private-app-polishnewsanalyzer-service",
              "Namespace": "private",
              "Stage": "app"
            },
            "tags_all": {
              "Attributes": "service",
              "Name": "private-app-polishnewsanalyzer-service",
              "Namespace": "private",
              "Stage": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task_pna",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic to any IPv4 address",
            "from_port": 0,
            "id": "sgrule-2030188590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ee19b13b36bb8243",
            "security_group_rule_id": "sgr-03a3d069e7129c2b2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.ecs_alb_service_task_pna.aws_security_group.ecs_service"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.autoscale_group[\"pna\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:subnet/subnet-0079b570ae856a846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0079b570ae856a846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374412816316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          }
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:subnet/subnet-05d3701bba435c36f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d3701bba435c36f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374412816316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          }
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:374412816316:security-group/sg-04d3da806fafdcd52",
            "description": "Allow inbound traffic from the security groups",
            "egress": [],
            "id": "sg-04d3da806fafdcd52",
            "ingress": [],
            "name": "private-app-rds",
            "name_prefix": "",
            "owner_id": "374412816316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-app-rds",
              "Namespace": "private",
              "Stage": "app"
            },
            "tags_all": {
              "Name": "private-app-rds",
              "Namespace": "private",
              "Stage": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2d7d42aa4bcdfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-a",
            "aws_subnet.private-subnet-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-1459747601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04d3da806fafdcd52",
            "security_group_rule_id": "sgr-06ce98801777b00ce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-a",
            "aws_subnet.private-subnet-b",
            "aws_vpc.main",
            "module.rds_instance.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}